Remove sun.misc.Unsafe plugins.